// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast Custom Class Name DOM Snapshot 1`] = `
<div
  className="slds-notify-container this-is-the-container"
>
  <div
    className="slds-notify slds-notify_toast slds-theme_info this-is-the-alert"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      info
    </span>
    <span
      className="slds-m-right_small slds-no-flex slds-align-top"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#info"
        />
      </svg>
      
    </span>
    <div
      className="slds-notify__content"
    >
      <h2
        className="slds-text-heading_small"
      >
        26 potential duplicate leads were found.
         
        <a
          href="javascript:void(0);"
        >
          Select Leads to Merge
        </a>
      </h2>
    </div>
    <button
      className="slds-button slds-button--icon-inverse slds-notify__close"
      disabled={false}
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon slds-button__icon--large"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Toast Custom Class Name HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container this-is-the-container\\">
  <div class=\\"slds-notify slds-notify_toast slds-theme_info this-is-the-alert\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">info</span><span class=\\"slds-m-right_small slds-no-flex slds-align-top\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#info\\"></use></svg></span>
    <div
      class=\\"slds-notify__content\\">
      <h2 class=\\"slds-text-heading_small\\">26 potential duplicate leads were found. <a href=\\"javascript:void(0);\\">Select Leads to Merge</a></h2>
  </div><button class=\\"slds-button slds-button--icon-inverse slds-notify__close\\" title=\\"Close\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon--large\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Close</span></button></div>
</div>"
`;

exports[`Toast Error DOM Snapshot 1`] = `
<div
  className="slds-notify-container"
>
  <div
    className="slds-notify slds-notify_toast slds-theme_error"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      error
    </span>
    <span
      className="slds-m-right_small slds-no-flex slds-align-top"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#error"
        />
      </svg>
      
    </span>
    <div
      className="slds-notify__content"
    >
      <h2
        className="slds-text-heading_small"
      >
        Can’t save lead “Sally Wong” because another lead has the same name.
         
      </h2>
    </div>
    <button
      className="slds-button slds-button--icon-inverse slds-notify__close"
      disabled={false}
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon slds-button__icon--large"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Toast Error HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_toast slds-theme_error\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">error</span><span class=\\"slds-m-right_small slds-no-flex slds-align-top\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#error\\"></use></svg></span>
    <div
      class=\\"slds-notify__content\\">
      <h2 class=\\"slds-text-heading_small\\">Can’t save lead “Sally Wong” because another lead has the same name. </h2>
  </div><button class=\\"slds-button slds-button--icon-inverse slds-notify__close\\" title=\\"Close\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon--large\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Close</span></button></div>
</div>"
`;

exports[`Toast Error With details DOM Snapshot 1`] = `
<div
  className="slds-notify-container"
>
  <div
    className="slds-notify slds-notify_toast slds-theme_error"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      error
    </span>
    <span
      className="slds-m-right_small slds-no-flex slds-align-top"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#error"
        />
      </svg>
      
    </span>
    <div
      className="slds-notify__content"
    >
      <h2
        className="slds-text-heading_small"
      >
        You've encountered some errors when trying to save edits to Samuel Smith.
         
      </h2>
      <p>
        Here's some detail of what happened, being very descriptive and transparent.
      </p>
    </div>
    <button
      className="slds-button slds-button--icon-inverse slds-notify__close"
      disabled={false}
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon slds-button__icon--large"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Toast Error With details HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_toast slds-theme_error\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">error</span><span class=\\"slds-m-right_small slds-no-flex slds-align-top\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#error\\"></use></svg></span>
    <div
      class=\\"slds-notify__content\\">
      <h2 class=\\"slds-text-heading_small\\">You&#x27;ve encountered some errors when trying to save edits to Samuel Smith. </h2>
      <p>Here&#x27;s some detail of what happened, being very descriptive and transparent.</p>
  </div><button class=\\"slds-button slds-button--icon-inverse slds-notify__close\\" title=\\"Close\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon--large\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Close</span></button></div>
</div>"
`;

exports[`Toast Info DOM Snapshot 1`] = `
<div
  className="slds-notify-container"
>
  <div
    className="slds-notify slds-notify_toast slds-theme_info"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      info
    </span>
    <span
      className="slds-m-right_small slds-no-flex slds-align-top"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#info"
        />
      </svg>
      
    </span>
    <div
      className="slds-notify__content"
    >
      <h2
        className="slds-text-heading_small"
      >
        26 potential duplicate leads were found.
         
        <a
          href="javascript:void(0);"
          onClick={[Function]}
        >
          Select Leads to Merge
        </a>
      </h2>
    </div>
    <button
      className="slds-button slds-button--icon-inverse slds-notify__close"
      disabled={false}
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon slds-button__icon--large"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Toast Info HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_toast slds-theme_info\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">info</span><span class=\\"slds-m-right_small slds-no-flex slds-align-top\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#info\\"></use></svg></span>
    <div
      class=\\"slds-notify__content\\">
      <h2 class=\\"slds-text-heading_small\\">26 potential duplicate leads were found. <a href=\\"javascript:void(0);\\">Select Leads to Merge</a></h2>
  </div><button class=\\"slds-button slds-button--icon-inverse slds-notify__close\\" title=\\"Close\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon--large\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Close</span></button></div>
</div>"
`;

exports[`Toast Success DOM Snapshot 1`] = `
<div
  className="slds-notify-container"
>
  <div
    className="slds-notify slds-notify_toast slds-theme_success"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      success
    </span>
    <span
      className="slds-m-right_small slds-no-flex slds-align-top"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
        />
      </svg>
      
    </span>
    <div
      className="slds-notify__content"
    >
      <h2
        className="slds-text-heading_small"
      >
        Account 
        <a
          href="javascript:void(0);"
        >
          ACME - 100
        </a>
         widgets was created.
         
      </h2>
    </div>
    <button
      className="slds-button slds-button--icon-inverse slds-notify__close"
      disabled={false}
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon slds-button__icon--large"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Toast Success HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_toast slds-theme_success\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">success</span><span class=\\"slds-m-right_small slds-no-flex slds-align-top\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#success\\"></use></svg></span>
    <div
      class=\\"slds-notify__content\\">
      <h2 class=\\"slds-text-heading_small\\">Account <a href=\\"javascript:void(0);\\">ACME - 100</a> widgets was created. </h2>
  </div><button class=\\"slds-button slds-button--icon-inverse slds-notify__close\\" title=\\"Close\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon--large\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Close</span></button></div>
</div>"
`;

exports[`Toast Warning DOM Snapshot 1`] = `
<div
  className="slds-notify-container"
>
  <div
    className="slds-notify slds-notify_toast slds-theme_warning"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      warning
    </span>
    <span
      className="slds-m-right_small slds-no-flex slds-align-top"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#warning"
        />
      </svg>
      
    </span>
    <div
      className="slds-notify__content"
    >
      <h2
        className="slds-text-heading_small"
      >
        Can’t share file “report-q3.pdf” with the selected users.
         
      </h2>
    </div>
    <button
      className="slds-button slds-button--icon-inverse slds-notify__close"
      disabled={false}
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon slds-button__icon--large"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Toast Warning HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_toast slds-theme_warning\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">warning</span><span class=\\"slds-m-right_small slds-no-flex slds-align-top\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#warning\\"></use></svg></span>
    <div
      class=\\"slds-notify__content\\">
      <h2 class=\\"slds-text-heading_small\\">Can’t share file “report-q3.pdf” with the selected users. </h2>
  </div><button class=\\"slds-button slds-button--icon-inverse slds-notify__close\\" title=\\"Close\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon--large\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Close</span></button></div>
</div>"
`;
